# azcam-bluechan

./: README.md  pyproject.toml  readme.md  requirements-github.txt  requirements.txt  requirements_github.txt  setup.cfg
azcam_bluechan/: IceExposure.py  MMTCommandParser.py  SendImage.py  ccdacq.py  console.py  console_bluechan.py  ice.py  ice_oldcommands.py  sendimage_ccdacq.py  server.py  server_bluechan.py
docs/: install notes.txt
support/: install.py  start_console_bluechan.py  start_server_bluechan.py
support/datafolder/parameters/: parameters_console_bluechan.ini  parameters_server_bluechan.ini
support/datafolder/templates/: fits_template_bluechan.txt
support/dspcode/dsppci/: pci1_host.bat  pci1boot.ls
support/dspcode/dsptiming/: GenerateTimCode.bat  MakeBlueChan.bat  p_1_321t.asm  p_2_123t_mpp.asm  p_2_321t.asm  s_12_321w.asm  s_1_321w.asm  s_2_123w.asm  s_2_132w.asm  s_2_231w.asm  tim1.asm  tim1__config3.ls  tim1_boot.ls  tim1_config3.lod  waveforms.asm
support/dspcode/dsputility/: util1.ls  util1_host.bat  utilboot1.ls
