[project]
name = "azcam-bluechan"
version = "22.2.1"
description = "Azcam extension for MMTO Spectrograph BlueChan camera"
license = {file ="LICENSE"}
readme = "README.md"
requires-python = ">=3.9"
keywords=["ccd", "imaging", "astronomy", "sensors"]
authors = [{name="Michael Lesser"},{email = "mlesser@arizona.edu"}]

dependencies = [
    "ipython",
    "rich",
    "azcam",
    "azcam-arc",
    "azcam-ds9",
    "azcam-imageserver",
    "azcam-webtools",
    "azcam-monitor",
    "azcam-fastapi",
]

[project.urls]
Documentation = "https://mplesser.github.io/azcam/"
Repository = "https://github.com/mplesser/azcam-bluechan/"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "azcam_bluechan"
